fixed some more style issues in python notebook

--- a/california_housing_price_prediction_with_linear_regression/California_housing_prices_predictions_with_lr_python.ipynb
+++ b/california_housing_price_prediction_with_linear_regression/California_housing_prices_predictions_with_lr_python.ipynb
@@ -609,7 +609,7 @@
    ],
    "source": [
     "# Lets plot this on top of a piece of california map.\n",
-    "california_img=mpimg.imread('california.png') #path to california image.\n",
+    "california_img = mpimg.imread('california.png') #path to california image.\n",
     "ax = dataset.plot(kind=\"scatter\",\n",
     "                  x=\"longitude\",\n",
     "                  y=\"latitude\", \n",
@@ -776,7 +776,11 @@
    "id": "296cfb38",
    "metadata": {},
    "source": [
-    "<i>It can be clearly seen that only total_bedrooms has missing values. Let's fill these missing values using median of the column.</i>\n"
+    "<i>It can be clearly seen that only total_bedrooms has missing values. Let's fill these missing values using median of the column.</i>\n",
+    "<br>\n",
+    "<b> NOTE: </b>\n",
+    " 1. We can also impute here using mean.\n",
+    " 2. For categorical data, use mode."
    ]
   },
   {
@@ -829,11 +833,7 @@
    "id": "5a7562d4",
    "metadata": {},
    "source": [
-    "It can be clearly seen now that we have filled all the missing values.\n",
-    "<br>\n",
-    "<b> NOTE: </b>\n",
-    " 1. We can also impute here using mean.\n",
-    " 2. For categorical data, use mode."
+    "It can be clearly seen now that we have filled all the missing values."
    ]
   },
   {
@@ -945,7 +945,7 @@
    "source": [
     "dataset[\"rooms_per_household\"] = dataset[\"total_rooms\"]/dataset[\"households\"]\n",
     "dataset[\"bedrooms_per_room\"] = dataset[\"total_bedrooms\"]/dataset[\"total_rooms\"]\n",
-    "dataset[\"population_per_household\"]=dataset[\"population\"]/dataset[\"households\"]"
+    "dataset[\"population_per_household\"] = dataset[\"population\"]/dataset[\"households\"]"
    ]
   },
   {
