fixed some style issues in cpp notebook

--- a/california_housing_price_prediction_with_linear_regression/california_housing_price_prediction_with_lr_cpp.ipynb
+++ b/california_housing_price_prediction_with_linear_regression/california_housing_price_prediction_with_lr_cpp.ipynb
@@ -272,7 +272,16 @@
     }
    ],
    "source": [
-    "encoded_dataset.n_rows"
+    "encoded_dataset.n_rows\n",
+    "// The above code prints the number of rows(features + labels) in current dataset."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89a8df9c",
+   "metadata": {},
+   "source": [
+    "You can notice the number of rows changed from 10 to 14, siginifying one hot encoding."
    ]
   },
   {
@@ -314,7 +323,7 @@
     }
    ],
    "source": [
-    "//Hist(inputFile, bins, width, height, outputFile);\n",
+    "// Hist(inputFile, bins, width, height, outputFile);\n",
     "Hist(\"housing.csv\", 50, 20, 15, \"histogram.png\");\n",
     "auto im = xw::image_from_file(\"histogram.png\").finalize();\n",
     "im"
@@ -351,7 +360,7 @@
     }
    ],
    "source": [
-    "//PandasScatter(inputFile, x, y, outputFile);\n",
+    "// PandasScatter(inputFile, x, y, outputFile);\n",
     "PandasScatter(\"housing.csv\", \"longitude\", \"latitude\", \"output.png\");\n",
     "auto im = xw::image_from_file(\"output.png\").finalize();\n",
     "im"
@@ -388,7 +397,7 @@
     }
    ],
    "source": [
-    "//PandasScatterColor(inputFile, x, y, label, c, outputFile)\n",
+    "// PandasScatterColor(inputFile, x, y, label, c, outputFile);\n",
     "PandasScatterColor(\"housing.csv\",\"longitude\",\"latitude\",\"Population\",\"median_house_value\",\"output1.png\");\n",
     "auto im = xw::image_from_file(\"output1.png\").finalize();\n",
     "im"
@@ -462,6 +471,7 @@
     }
    ],
    "source": [
+    "// HeatMap(inputFile, outputFile);\n",
     "HeatMap(\"housing.csv\", \"heatmap.png\");\n",
     "auto im = xw::image_from_file(\"heatmap.png\").finalize();\n",
     "im"
