cpp notebook markdown

--- a/california_housing_price_prediction_with_linear_regression/california_housing_price_prediction_with_lr_cpp.ipynb
+++ b/california_housing_price_prediction_with_linear_regression/california_housing_price_prediction_with_lr_cpp.ipynb
@@ -281,7 +281,7 @@
    "id": "89a8df9c",
    "metadata": {},
    "source": [
-    "You can notice the number of rows changed from 10 to 14, siginifying one hot encoding."
+    "You can notice the number of rows changed from 10 to 14, siginifying one hot encoding in this case."
    ]
   },
   {
