use of dataset.mlpack.org

--- a/california_housing_price_prediction_with_linear_regression/California_housing_prices_predictions_with_lr_python.ipynb
+++ b/california_housing_price_prediction_with_linear_regression/California_housing_prices_predictions_with_lr_python.ipynb
@@ -102,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget -q https://matrix.org/_matrix/media/r0/download/matrix.org/WvrgbgzkyIMbvkxLkKKNyMrO/housing.csv"
+    "!wget -q https://datasets.mlpack.org/examples/housing.csv"
    ]
   },
   {
