Some minor additions

--- a/rocket_injector_design/rocket-injector-design-cpp.ipynb
+++ b/rocket_injector_design/rocket-injector-design-cpp.ipynb
@@ -1,38 +1,37 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 13,
    "source": [
     "/**\n",
     " * @file rocket-injector-design-cpp.ipynb\n",
     " * \n",
     " * This notebook demonstrates a practical application of Multi-Objective Optimizers. The design of the injector surface is\n",
-    " * modified to study its effect on thermal stability and combustion efficiency. The optimizer simultaneously balances these   \n",
-    " * objectives to returns a set of optimal solutions.\n",
+    " * modified to study its effect on the thrust chamber environment and performance. The optimizer simultaneously balances these   \n",
+    " * objectives to returns a set of Pareto optimal solutions.\n",
     " *\n",
-    " * Also known as RE3-4-7 this problem has been taken from \"An Easy-to-use Real-world Multi-objective\n",
-    " * Optimization Problem Suite\" paper. For more info, visit: https://github.com/ryojitanabe/reproblems.\n",
+    " * Also known as RE3-4-7, this problem has been taken from \"An Easy-to-use Real-world Multi-objective\n",
+    " * Optimization Problem Suite\" paper. For more information, visit: https://github.com/ryojitanabe/reproblems.\n",
     " */"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   ],
    "outputs": [],
-   "source": [
-    "#include <mlpack/xeus-cling.hpp>\n",
-    "\n",
-    "#include <ensmallen.hpp>\n",
-    "#include \"../utils/portfolio.hpp\""
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "source": [
+    "#include <mlpack/xeus-cling.hpp>\n",
+    "\n",
+    "#include <ensmallen.hpp>"
+   ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "source": [
     "// Header files to create and show the plot.\n",
     "#define WITHOUT_NUMPY 1\n",
@@ -40,47 +39,83 @@
     "#include \"xwidgets/ximage.hpp\"\n",
     "\n",
     "namespace plt = matplotlibcpp;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   ],
    "outputs": [],
-   "source": [
-    "using namespace ens;"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "source": [
+    "using namespace ens;"
+   ],
    "outputs": [],
-   "source": [
-    "using namespace ens::test;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 1. Setup the problem.\n",
-    "\n",
-    "This problem aligns with NASA's larger goal of the Next Generation Launch Technology (NGLT) Program aimed at durable and high-performance launch systems. We desire high combustion efficiency while maintaining thermal conditions along the chamber walls.\n",
-    "\n",
-    "The design of the injector is directly related to these objectives. By controlling the design variables of the injector, we \n",
-    "\n",
-    "The variables concerning the design of the injector are:\n",
-    "\n",
-    "a) Hydrogen Flow Angle: The acute angle formed between the fuel and oxidiser.\n",
-    "b) Hydrogen Area:  The area of the tube   "
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "source": [
+    "using namespace ens::test;"
+   ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 1. Background\n",
+    "\n",
+    "This problem aligns with NASA's larger goal of the **Next Generation Launch Technology (NGLT)** Program aimed at durable and high-performance launch systems. In a simplistic setting, a rocket system generally consists of two liquid propellants, an oxidiser ($O_2$) and fuel ($H_2$). These propellants are mixed with the help of an injector machine. The injector machine is connected directly to the combuston chamber where the reaction occur. \n",
+    "\n",
+    "\n",
+    "The mixing of $H_2$ and $O_2$ is inherently an [exothermic](https://en.wikipedia.org/wiki/Exothermic_process) phenomenon; it lets out heat. This reaction is the principle behind the take-off of rockets.\n",
+    "\n",
+    "$$ 2H_2 + O_2\\  -> 2H_2 O + 241.8 kJ$$\n",
+    "\n",
+    "Propellants mix\n",
+    "\n",
+    "\n"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 2. Framing the problem.\n",
+    "\n",
+    "\n",
+    "#### I. Design Variables\n",
+    "The design of the injector is directly related to these objectives. By controlling the design variables of the injector, we \n",
+    "\n",
+    "The variables concerning the design of the injector are:\n",
+    "\n",
+    "a) Hydrogen Flow Angle ($\\alpha$) : The acute angle formed between the fuel and oxidiser.\n",
+    "\n",
+    "b) Hydrogen Area ($H.A$):  The area of the tube\n",
+    "\n",
+    "c) Oxygen Area ($O.A$):\n",
+    "\n",
+    "d) Oxygen Post-Tip-Thickness ($O.P.T.T$): "
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### II. Objective Functions\n",
+    "\n",
+    "a) Maximum Temperature At Injector Face:\n",
+    "\n",
+    "b) Distance From Inlet:\n",
+    "\n",
+    "c) "
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "source": [
     "class InjectorDesignProblem\n",
     "{\n",
@@ -177,13 +212,13 @@
     "\n",
     "InjectorDesignProblem idp;\n",
     "auto objectives = idp.GetObjectives();"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
    "source": [
     "const double lowerBound = 0;\n",
     "const double upperBound = 1;\n",
@@ -202,25 +237,34 @@
     "                 );\n",
     "\n",
     "arma::mat coords = idp.GetInitialPoint();"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   ],
    "outputs": [],
-   "source": [
-    "moead.Optimize(objectives, coords);"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "source": [
+    "moead.Optimize(objectives, coords);"
+   ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "source": [
     "const arma::cube& paretoFront = moead.ParetoFront();"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
