Add images to media folder

--- a/rocket_injector_design/rocket-injector-design-cpp.ipynb
+++ b/rocket_injector_design/rocket-injector-design-cpp.ipynb
@@ -62,84 +62,22 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "source": [
-    "!wget --no-check-certificate 'https://docs.google.com/uc?export=download&id=1_8a8kF9kJgIaAPYzIyqAf4t0ZSG5xftt' -O design.jpg"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "--2021-07-11 09:04:20--  https://docs.google.com/uc?export=download&id=1_8a8kF9kJgIaAPYzIyqAf4t0ZSG5xftt\n",
-      "Resolving docs.google.com (docs.google.com)... 172.217.21.142, 2a00:1450:400f:809::200e\n",
-      "Connecting to docs.google.com (docs.google.com)|172.217.21.142|:443... connected.\n",
-      "HTTP request sent, awaiting response... 302 Moved Temporarily\n",
-      "Location: https://doc-0s-10-docs.googleusercontent.com/docs/securesc/ha0ro937gcuc7l7deffksulhg5h7mbp1/dlum42o9rgr9caia43mk7m0djtpfhdf1/1625994225000/14561647146758490759/*/1_8a8kF9kJgIaAPYzIyqAf4t0ZSG5xftt?e=download [following]\n",
-      "Warning: wildcards not supported in HTTP.\n",
-      "--2021-07-11 09:04:21--  https://doc-0s-10-docs.googleusercontent.com/docs/securesc/ha0ro937gcuc7l7deffksulhg5h7mbp1/dlum42o9rgr9caia43mk7m0djtpfhdf1/1625994225000/14561647146758490759/*/1_8a8kF9kJgIaAPYzIyqAf4t0ZSG5xftt?e=download\n",
-      "Resolving doc-0s-10-docs.googleusercontent.com (doc-0s-10-docs.googleusercontent.com)... 216.58.207.193, 2a00:1450:400f:80b::2001\n",
-      "Connecting to doc-0s-10-docs.googleusercontent.com (doc-0s-10-docs.googleusercontent.com)|216.58.207.193|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 24487 (24K) [image/jpeg]\n",
-      "Saving to: ‘design.jpg’\n",
-      "\n",
-      "     0K .......... .......... ...                             100% 3.26M=0.007s\n",
-      "\n",
-      "2021-07-11 09:04:21 (3.26 MB/s) - ‘design.jpg’ saved [24487/24487]\n",
-      "\n"
-     ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "source": [
-    "!wget --no-check-certificate 'https://docs.google.com/uc?export=download&id=1QZPed9835iIcyfA4SdrIgtKLDHrc3XB1' -O objectives.jpg"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "--2021-07-11 09:04:22--  https://docs.google.com/uc?export=download&id=1QZPed9835iIcyfA4SdrIgtKLDHrc3XB1\n",
-      "Resolving docs.google.com (docs.google.com)... 172.217.21.142, 2a00:1450:400f:809::200e\n",
-      "Connecting to docs.google.com (docs.google.com)|172.217.21.142|:443... connected.\n",
-      "HTTP request sent, awaiting response... 302 Moved Temporarily\n",
-      "Location: https://doc-00-10-docs.googleusercontent.com/docs/securesc/ha0ro937gcuc7l7deffksulhg5h7mbp1/cpme9ka8vggr0egn6bcq2j7b7m4dlbuh/1625994225000/14561647146758490759/*/1QZPed9835iIcyfA4SdrIgtKLDHrc3XB1?e=download [following]\n",
-      "Warning: wildcards not supported in HTTP.\n",
-      "--2021-07-11 09:04:22--  https://doc-00-10-docs.googleusercontent.com/docs/securesc/ha0ro937gcuc7l7deffksulhg5h7mbp1/cpme9ka8vggr0egn6bcq2j7b7m4dlbuh/1625994225000/14561647146758490759/*/1QZPed9835iIcyfA4SdrIgtKLDHrc3XB1?e=download\n",
-      "Resolving doc-00-10-docs.googleusercontent.com (doc-00-10-docs.googleusercontent.com)... 216.58.207.193, 2a00:1450:400f:80b::2001\n",
-      "Connecting to doc-00-10-docs.googleusercontent.com (doc-00-10-docs.googleusercontent.com)|216.58.207.193|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 35316 (34K) [image/jpeg]\n",
-      "Saving to: ‘objectives.jpg’\n",
-      "\n",
-      "     0K .......... .......... .......... ....                 100% 3.07M=0.01s\n",
-      "\n",
-      "2021-07-11 09:04:23 (3.07 MB/s) - ‘objectives.jpg’ saved [35316/35316]\n",
-      "\n"
-     ]
-    }
+    "### 1. Background\n",
+    "\n",
+    "This problem aligns with NASA's larger goal of the **Next Generation Launch Technology (NGLT)** program aimed at durable and high-performance launch systems. In this section, we will \n",
+    "\n",
+    "A rocket system consists of two liquid propellants, namely the fuel ($H_2$) and oxidiser ($O_2$). These propellants are stored in separate tanks, and pumped into the combustion chamber. The chamber houses the exothermic reaction between the propellants to release energy vital for the take-off process.\n",
+    "\n",
+    "For the reaction to occur readily, an injector mechanism is installed which disperses these liquid propellants into tiny droplets and allow the mixing of the chemicals. A good injector design is makes all the difference between your system performing excellently and it exploding. See the figure below."
    ],
    "metadata": {}
   },
   {
    "cell_type": "markdown",
    "source": [
-    "### 1. Background\n",
-    "\n",
-    "This problem aligns with NASA's larger goal of the **Next Generation Launch Technology (NGLT)** Program aimed at durable and high-performance launch systems. In a simplistic setting, a rocket system generally consists of two liquid propellants, an oxidiser ($O_2$) and fuel ($H_2$). These propellants are mixed with the help of an injector machine. The injector machine is connected directly to the combuston chamber where the reaction occur. \n",
-    "\n",
-    "\n",
-    "The mixing of $H_2$ and $O_2$ is inherently an [exothermic](https://en.wikipedia.org/wiki/Exothermic_process) phenomenon; it lets out heat. This reaction is the principle behind the take-off of rockets.\n",
-    "\n",
-    "$$ 2H_2 + O_2\\  -> 2H_2 O + 241.8 kJ$$\n",
-    "\n",
-    "Propellants mix"
+    "![](media/combustion.gif)"
    ],
    "metadata": {}
   },
@@ -150,6 +88,7 @@
     "\n",
     "\n",
     "#### I. Design Variables\n",
+    "\n",
     "The design of the injector is directly related to these objectives. By controlling the design variables of the injector, we \n",
     "\n",
     "The variables concerning the design of the injector are:\n",
@@ -167,10 +106,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "![](design.jpg)"
+    "![](media/design.jpg)"
    ],
-   "metadata": {},
-   "attachments": {}
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
@@ -188,13 +126,13 @@
   {
    "cell_type": "markdown",
    "source": [
-    "![](objectives.jpg)"
+    "![](media/objectives.jpg)"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "source": [
     "class InjectorDesignProblem\n",
     "{\n",
@@ -297,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "source": [
     "const double lowerBound = 0;\n",
     "const double upperBound = 1;\n",
@@ -322,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "source": [
     "moead.Optimize(objectives, coords);"
    ],
@@ -331,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "source": [
     "const arma::cube& paretoFront = moead.ParetoFront();"
    ],
