Added reference + more images

--- a/rocket_injector_design/rocket-injector-design-cpp.ipynb
+++ b/rocket_injector_design/rocket-injector-design-cpp.ipynb
@@ -66,18 +66,27 @@
    "source": [
     "### 1. Background\n",
     "\n",
-    "This problem aligns with NASA's larger goal of the **Next Generation Launch Technology (NGLT)** program aimed at durable and high-performance launch systems. In this section, we will \n",
+    "It was the June of 1962, the company Rocketdyne was tasked with heavy responsibility of sending man to the moon as per Kennedy's bold promise. NASA along with Rocketdyne, developed an F-1 engine capable of burning an fuel of olympic size swimming pool. On the D-day when the engines ignited and the rocket was ready to take off, the engines exploded and the failure was catastrophic.\n",
     "\n",
-    "A rocket system consists of two liquid propellants, namely the fuel ($H_2$) and oxidiser ($O_2$). These propellants are stored in separate tanks, and pumped into the combustion chamber. The chamber houses the exothermic reaction between the propellants to release energy vital for the take-off process.\n",
+    "**So, what went wrong?**\n",
     "\n",
-    "For the reaction to occur readily, an injector mechanism is installed which disperses these liquid propellants into tiny droplets and allow the mixing of the chemicals. A good injector design is makes all the difference between your system performing excellently and it exploding. See the figure below."
+    "Let's discuss the basics first.\n",
+    "\n",
+    "A rocket system consists of two liquid propellants, namely the fuel ($H_2$) and oxidiser ($O_2$). These propellants are stored in separate tanks, and pumped into the combustion chamber. The chamber houses the exothermic reaction between the propellants to release energy vital for the take-off process. For the reaction to occur readily, an injector mechanism is installed which disperses these liquid propellants into tiny droplets and allow the mixing of the chemicals.\n",
+    "\n",
+    "![](media/combustion.gif)"
    ],
    "metadata": {}
   },
   {
    "cell_type": "markdown",
    "source": [
-    "![](media/combustion.gif)"
+    " **The Achilles heel**\n",
+    " \n",
+    " A good injector design makes all the difference between your system performing excellently and it exploding. Unfortunately, the latter was the case for the ambitious project. Thing is, the reaction between these propellants create extreme temperature and pressure environments. Thus, if the mixing is too aggressive or if the influx of propellants is uneven its very easy that the entire system to break down.\n",
+    "  \n",
+    " \n",
+    " ![](media/unstable.gif)"
    ],
    "metadata": {}
   },
@@ -89,17 +98,15 @@
     "\n",
     "#### I. Design Variables\n",
     "\n",
-    "The design of the injector is directly related to these objectives. By controlling the design variables of the injector, we \n",
+    "The design of the injector plays a key role in the mixing and stability of the system. \n",
     "\n",
-    "The variables concerning the design of the injector are:\n",
+    "a) **Hydrogen Flow Angle** ($\\alpha$) : The acute angle formed between the fuel and oxidiser. \n",
     "\n",
-    "a) Hydrogen Flow Angle ($\\alpha$) : The acute angle formed between the fuel and oxidiser.\n",
+    "b) **Hydrogen Area** ($H.A$):  The area of the tube from which $H_2$ flows in.\n",
     "\n",
-    "b) Hydrogen Area ($H.A$):  The area of the tube\n",
+    "c) **Oxygen Area** ($O.A$): The area of the tube from which $O_2$ flows in.\n",
     "\n",
-    "c) Oxygen Area ($O.A$):\n",
-    "\n",
-    "d) Oxygen Post-Tip-Thickness ($O.P.T.T$): "
+    "d) **Oxygen Post-Tip-Thickness** ($O.P.T.T$): The thickness of the annulus between the two propellants."
    ],
    "metadata": {}
   },
@@ -115,18 +122,22 @@
    "source": [
     "#### II. Objective Functions\n",
     "\n",
-    "a) Maximum Temperature At Injector Face:\n",
+    "All the objectives below should be **minimized**. Further, each of the following output have been normalized to [0, 1] range.\n",
     "\n",
-    "b) Distance From Inlet:\n",
+    "a) **Maximum temperature at injector face** ($TF_{max}$): The variable name is self descriptive. Determines the thermal stability of the combustion chamber. \n",
     "\n",
-    "c) "
+    "b) **Distance From inlet** ($X_{CC}$): The distance from the injector surface where 90% of the combustion is complete. Lesser   values signifies quality mixing and high performance.\n",
+    "\n",
+    "c) **Maximum temperature at post tip** ($TT_{max}$): The temperature at the annulus of the propellants tubes. Similar to $TF_{max}$, this objective is to be minimized to prevent thermal breakdown."
    ],
    "metadata": {}
   },
   {
    "cell_type": "markdown",
    "source": [
-    "![](media/objectives.jpg)"
+    "![](media/objectives.jpg)   \n",
+    "\n",
+    "                                                "
    ],
    "metadata": {}
   },
@@ -224,7 +235,7 @@
     "    };\n",
     "    \n",
     "    size_t numVariables = 4;\n",
-    "    size_t numObjectives = 2;\n",
+    "    size_t numObjectives = 3;\n",
     "};\n",
     "\n",
     "InjectorDesignProblem idp;\n",
@@ -277,10 +288,16 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "cell_type": "markdown",
+   "source": [
+    "### References\n",
+    "\n",
+    "1. \"NASA's Baffling Engine Problem\", Youtube, uploaded by Primal Space, 13th March 2020, https://www.youtube.com/watch?v=xbvQBwnppQo.\n",
+    "2. \"LIQUID PROPELLANT ROCKET ENGINE/liquid rocket 3d animation/construction working/ LEARN FROM THE BASE\", Youtube, uploaded by Learn from the base. 12th September 2020, https://www.youtube.com/watch?v=9Y3fG-YrIII.\n",
+    "3. \"Rocket Fuel Injectors - Things Kerbal Space Program Doesn't Teach\", Youtube, uploaded by Scott Manley, 10th March 2020, https://www.youtube.com/watch?v=aa4ATJGRqA0.\n",
+    "4. Tanabe, Ryoji, and Hisao Ishibuchi. \"An easy-to-use real-world multi-objective optimization problem suite.\" Applied Soft Computing 89 (2020): 106078.\n",
+    "5. Vaidyanathan, Rajkumar, et al. \"Cfd-based design optimization for single element rocket injector.\" 41st Aerospace Sciences Meeting and Exhibit. 2003."
+   ],
    "metadata": {}
   }
  ],
