--- a/rocket_injector_design/rocket-injector-design-cpp.ipynb
+++ b/rocket_injector_design/rocket-injector-design-cpp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "source": [
     "/**\n",
     " * @file rocket-injector-design-cpp.ipynb\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "source": [
     "#include <mlpack/xeus-cling.hpp>\n",
     "\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "source": [
     "// Header files to create and show the plot.\n",
     "#define WITHOUT_NUMPY 1\n",
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "source": [
     "using namespace ens;"
    ],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "source": [
     "using namespace ens::test;"
    ],
@@ -83,9 +83,10 @@
    "source": [
     " **The Achilles heel**\n",
     " \n",
-    " A good injector design makes all the difference between your system performing excellently and it exploding. Unfortunately, the latter was the case for the ambitious project. Thing is, the reaction between these propellants create extreme temperature and pressure environments. Thus, if the mixing is too aggressive or if the influx of propellants is uneven its very easy that the entire system to break down.\n",
-    "  \n",
-    " \n",
+    "A good injector design makes all the difference between your system performing excellently and it exploding. Unfortunately, the latter was the case for the ambitious project. \n",
+    "\n",
+    "Why so? The devil's in the details. The combustion process creates extreme temperature and pressure conditions inside the thrust chamber. Under such circumstances, the chamber is a very sensible high-pressure cooking pot. Thus, if the influx is off ever so slightly the flames would sway controllably burning down the entire system. \n",
+    "\n",
     " ![](media/unstable.gif)"
    ],
    "metadata": {}
@@ -95,10 +96,12 @@
    "source": [
     "### 2. Framing the problem.\n",
     "\n",
+    "With the motivation established, let's begin by framing the problem. As discussed, the cornerstone of an ideal rocket system is its injector design. One can infer that the performance and quality of life of the system stand in stark contrast. Both of these are primarily controlled by injector design. This is where multi-objective optimizers kick in. In this notebook, we will try and find the optimal set of design variables to generate a set of [Pareto Optimal](https://www.investopedia.com/terms/p/pareto-efficiency.asp) solutions.\n",
     "\n",
-    "#### I. Design Variables\n",
     "\n",
-    "The design of the injector plays a key role in the mixing and stability of the system. \n",
+    "#### I. Design Variables \n",
+    "\n",
+    "The values are normalized to the range [0, 1].\n",
     "\n",
     "a) **Hydrogen Flow Angle** ($\\alpha$) : The acute angle formed between the fuel and oxidiser. \n",
     "\n",
@@ -124,7 +127,7 @@
     "\n",
     "All the objectives below should be **minimized**. Further, each of the following output have been normalized to [0, 1] range.\n",
     "\n",
-    "a) **Maximum temperature at injector face** ($TF_{max}$): The variable name is self descriptive. Determines the thermal stability of the combustion chamber. \n",
+    "a) **Maximum temperature at injector face** ($TF_{max}$): Pevent meltdown of the injector surface. Determines the thermal stability of the combustion chamber. \n",
     "\n",
     "b) **Distance From inlet** ($X_{CC}$): The distance from the injector surface where 90% of the combustion is complete. Lesser   values signifies quality mixing and high performance.\n",
     "\n",
@@ -143,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "source": [
     "class InjectorDesignProblem\n",
     "{\n",
@@ -279,10 +282,66 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Store the optimal set of solutions in a ```arma::cube``` data structure. Each slice of the cube is a ```3 x 1``` matrix \n",
+    "representing a single set of optimal solution."
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "source": [
     "const arma::cube& paretoFront = moead.ParetoFront();"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "size_t populationSize = paretoFront.n_slices;\n",
+    "\n",
+    "std::vector<double> X (populationSize, 0.), \n",
+    "                    Y (populationSize, 0.), \n",
+    "                    Z (populationSize, 0.);\n",
+    "\n",
+    "for (size_t idx = 0; idx < populationSize; ++idx)\n",
+    "{\n",
+    "    X[idx] = paretoFront.slice(idx)(0);\n",
+    "    Y[idx] = paretoFront.slice(idx)(1);\n",
+    "    Z[idx] = paretoFront.slice(idx)(2);\n",
+    "}"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "plt::figure_size(1000, 800);\n",
+    "plt::suptitle(\"Scatter Matrix of Pareto Fronts\");\n",
+    "plt::subplot(3, 1, 1);\n",
+    "plt::scatter(X, Y, 50);\n",
+    "plt::xlabel(\"InjectorFaceHeatCap\");\n",
+    "plt::ylabel(\"DistanceFromInlet\");\n",
+    "\n",
+    "plt::subplot(3, 1, 2);\n",
+    "plt::scatter(X, Z, 50);\n",
+    "plt::xlabel(\"InjectorFaceHeatCap\");\n",
+    "plt::ylabel(\"PostTipHeatCap\");\n",
+    "\n",
+    "plt::subplot(3, 1, 3);\n",
+    "plt::scatter(Y, Z, 50);\n",
+    "plt::xlabel(\"DistanceFromInlet\");\n",
+    "plt::ylabel(\"PostTipHeatCap\");\n",
+    "\n",
+    "plt::save(\"./scatter.png\");\n",
+    "auto im = xw::image_from_file(\"scatter.png\").finalize();\n",
+    "im"
    ],
    "outputs": [],
    "metadata": {}
