--- a/rocket_injector_design/rocket-injector-design-cpp.ipynb
+++ b/rocket_injector_design/rocket-injector-design-cpp.ipynb
@@ -66,7 +66,7 @@
    "source": [
     "### 1. Background\n",
     "\n",
-    "It was the June of 1962, the company Rocketdyne was tasked with heavy responsibility of sending man to the moon as per Kennedy's bold promise. NASA along with Rocketdyne, developed an F-1 engine capable of burning an fuel of olympic size swimming pool. On the D-day when the engines ignited and the rocket was ready to take off, the engines exploded and the failure was catastrophic.\n",
+    "It was the June of 1962, the company Rocketdyne was tasked with the heavy responsibility of sending a man to the moon as per Kennedy's bold promise. NASA, along with Rocketdyne, developed an F-1 engine capable of burning fuel of Olympic size swimming pool. On the D-day, when the engines ignited and the rocket was ready to take off, the engines exploded and the failure was catastrophic.\n",
     "\n",
     "**So, what went wrong?**\n",
     "\n",
