--- a/rocket_injector_design/rocket-injector-design-cpp.ipynb
+++ b/rocket_injector_design/rocket-injector-design-cpp.ipynb
@@ -72,7 +72,7 @@
     "\n",
     "Let's discuss the basics first.\n",
     "\n",
-    "A rocket system consists of two liquid propellants, namely the fuel ($H_2$) and oxidiser ($O_2$). These propellants are stored in separate tanks, and pumped into the combustion chamber. The chamber houses the exothermic reaction between the propellants to release energy vital for the take-off process. For the reaction to occur readily, an injector mechanism is installed which disperses these liquid propellants into tiny droplets and allow the mixing of the chemicals.\n",
+    "A rocket system consists of two liquid propellants, namely the fuel ($H_2$) and oxidiser ($O_2$). These propellants are stored in separate tanks, and pumped into the combustion chamber. The chamber houses the exothermic reaction between the propellants to release energy vital for the take-off process. For the reaction to occur readily, an injector mechanism is installed, which disperses these liquid propellants into tiny droplets and allow the mixing of the chemicals.\n",
     "\n",
     "![](media/combustion.gif)"
    ],
