--- a/rocket_injector_design/rocket-injector-design-cpp.ipynb
+++ b/rocket_injector_design/rocket-injector-design-cpp.ipynb
@@ -127,7 +127,7 @@
     "\n",
     "All the objectives below should be **minimized**. Further, each of the following output have been normalized to [0, 1] range.\n",
     "\n",
-    "a) **Maximum temperature at injector face** ($TF_{max}$): Pevent meltdown of the injector surface. Determines the thermal stability of the combustion chamber. \n",
+    "a) **Maximum temperature at injector face** ($TF_{max}$): Prevent meltdown of the injector surface. Determines the thermal stability of the combustion chamber. \n",
     "\n",
     "b) **Distance From inlet** ($X_{CC}$): The distance from the injector surface where 90% of the combustion is complete. Lesser   values signifies quality mixing and high performance.\n",
     "\n",
